# indabax_hack_2025

./: .docker-ignore  .gitignore  ASSUMPTION.md  Dockerfile  README.md  USER-MANUAL.md  config.py  docker-compose.yaml  install-deps.sh  main.py  pyproject.toml
api/: .gitignore  Dockerfile  README.md  ai.py  config.py  docker-compose.yaml  main.py  pyproject.toml
api/data/preprocessed/: dataset.xlsx
dashboard/: .gitignore  Dockerfile  README.md  USER-MANUAL.md  __init__.py  config.py  docker-compose.yaml  main.py  pyproject.toml
dashboard/dashboard/: __init__.py
data/preprocessed/: dataset.xlsx
data/raw/: dataset.xlsx
preprocess/: __init__.py  utils.py
