[project]
name = "ixh-25-api"
version = "0.1.0"
description = "Proposal solution for the indabaX hackathon 2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.setuptools]
packages = []


[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
prod = []
